2007-04-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-details.c: (update_color_buttons_from_string):
	don't crash if the color string is mangled, and close a small
	memory leak

2007-03-21  Frederic Crozat  <fcrozat@mandriva.com>

	* gnome-theme-details.c: (update_color_scheme_tab):
	Disable revert button when using theme engine defaults colors.
	Close bug #417423.

2007-03-04  Benjamin Berg  <benjamin@sipsolutions.net>

	* gnome-theme-details.c: (update_color_scheme_tab):
	Free the engine and color scheme lists.
	Removed some bogus old code that caused the current theme to be
	checked instead of the new one.

2007-03-04  Thomas Wood  <thos@gnome.org>

	* Makefile.am:
	* gtkrc-utils.c:
	* gtkrc-utils.h:
	Move gtkrc-utils into capplets/common

2007-02-28  Thomas Wood  <thos@gnome.org>

	* gnome-theme-details.c: (load_theme_names): Replace a deprecated function
	(color_select), (gnome_theme_details_init): Rename color_select() to gtk_color_scheme_changed()

2007-02-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-installer.c: (transfer_done_tarbz2_idle_cb): fix
	harmless copy'n'paste error

2007-02-22  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-details.c: (color_select): color components in
	GdkColor are guint16 not guint8, so format accordingly. Fixes bug
	398331.

2007-02-22  Jens Granseuer  <jensgr@gmx.net>

	* gtkrc-utils.c: (gtkrc_find_named):
	* gtkrc-utils.h: constify arg to fix a compiler warning

2007-02-22  Jens Granseuer  <jensgr@gmx.net>

	* gnome-theme-details.c: (color_select): update selected_fg_color
	from the correct slot. Fixes bug 410764.

2007-02-08  Thomas Wood  <thos@gnome.org>

	Patch by: Matthias Clasen <mclasen@redhat.com>

	* gnome-theme-details.c: (gtk_theme_update_remove_button),
	(update_color_scheme_tab), (gtk_theme_selection_changed),
	(color_select), (revert_color_scheme_key),
	(gnome_theme_details_init), (update_color_buttons_from_string),
	(gnome_theme_details_update_from_gconf): Listens for changes in the