@@ -1,3 +1,11 @@
+2007-04-08  Jens Granseuer  <jensgr@gmx.net>
+
+	Based on a patch by: Kristof Vansant <de_lupus@pandora.be>
+
+	* gnome-theme-installer.c: (gnome_theme_installer_run): add filters
+	for theme packages to the file chooser and mark the file chooser
+	title for translation. Closes bug #424960.
+
 2007-04-03  Jens Granseuer  <jensgr@gmx.net>
 
 	* gnome-theme-details.c: (update_color_buttons_from_string):
